list properties correctly

--- a/templates/property_detail.html
+++ b/templates/property_detail.html
@@ -86,8 +86,8 @@
                     <dt class="col-sm-6">Agency:</dt>
                     <dd class="col-sm-6">{{ property.agency or 'N/A' }}</dd>
                     
-                    <dt class="col-sm-6">Property Code:</dt>
-                    <dd class="col-sm-6">{{ property.code or 'N/A' }}</dd>
+                     <dt class="col-sm-6">Agency Listing ID:</dt>
+                     <dd class="col-sm-6">{{ property.agency_listing_id or 'N/A' }}</dd>
                     
                     <dt class="col-sm-6">Scraped On:</dt>
                     <dd class="col-sm-6">{{ property.scrape_date or 'N/A' }}</dd>
