--- a/templates/search.html
+++ b/templates/search.html
@@ -85,7 +85,7 @@
                             {{ property.city }} 
                             {% if property.neighborhood %}| {{ property.neighborhood }}{% endif %}
                         </p>
-                         <a href="/properties/{{ property.code }}" class="btn btn-sm btn-outline-primary">View Details</a>
+                          <a href="/properties/{{ property.id }}" class="btn btn-sm btn-outline-primary">View Details</a>
                     </div>
                 </div>
             </div>
