--- a/templates/base.html
+++ b/templates/base.html
@@ -41,20 +41,23 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav me-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="/">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/properties">Properties</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/stats">Stats</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/about">About</a>
-                    </li>
-                </ul>
+                 <ul class="navbar-nav me-auto">
+                     <li class="nav-item">
+                         <a class="nav-link" href="/">Home</a>
+                     </li>
+                     <li class="nav-item">
+                         <a class="nav-link" href="/properties">Properties</a>
+                     </li>
+                     <li class="nav-item">
+                         <a class="nav-link" href="/stats">Stats</a>
+                     </li>
+                     <li class="nav-item">
+                         <a class="nav-link" href="/about">About</a>
+                     </li>
+                     <li class="nav-item">
+                         <a class="nav-link" href="/admin">Admin</a>
+                     </li>
+                 </ul>
             </div>
         </div>
     </nav>
