--- a/templates/property_detail.html
+++ b/templates/property_detail.html
@@ -64,18 +64,30 @@
                     <p>{{ property.description or 'No description available.' }}</p>
                 </div>
                 
-                {% if property.features and property.features|length > 0 %}
-                <div class="property-features mt-4">
-                    <h4>Features</h4>
-                    <ul class="list-unstyled">
-                        {% for feature in property.features %}
-                        <li class="mb-2"><span class="badge bg-light text-dark">{{ feature }}</span></li>
-                        {% endfor %}
-                    </ul>
-                </div>
-                {% endif %}
-            </div>
-        </div>
+                 {% if property.features and property.features|length > 0 %}
+                 <div class="property-features mt-4">
+                     <h4>Features</h4>
+                     <ul class="list-unstyled">
+                         {% for feature in property.features %}
+                         <li class="mb-2"><span class="badge bg-light text-dark">{{ feature }}</span></li>
+                         {% endfor %}
+                     </ul>
+                 </div>
+                 {% endif %}
+             </div>
+         </div>
+         
+         <!-- Iframe Container - will be populated by JavaScript -->
+         <div class="row mt-4">
+             <div class="col-md-12">
+                 <div class="card" id="iframe-card" style="display: none;">
+                     <div class="card-body">
+                         <h5 class="card-title">Original Listing</h5>
+                         <div id="iframe-container" style="display: none;"></div>
+                     </div>
+                 </div>
+             </div>
+         </div>
     </div>
     
     <div class="col-md-4">
@@ -96,11 +108,17 @@
                     <dd class="col-sm-6">{{ property.publication_date or 'N/A' }}</dd>
                 </dl>
                 
-                <div class="mt-4">
-                    <a href="{{ property.url }}" class="btn btn-primary w-100" target="_blank">
-                        View Original Listing
-                    </a>
-                </div>
+                  <div class="mt-4 d-grid gap-2">
+                      <a href="{{ property.url }}" class="btn btn-primary" target="_blank">
+                          View Original Listing
+                      </a>
+                      <button class="btn btn-secondary" onclick="loadOriginalListingIframe('{{ property.url }}')">
+                          Open Original Listing Below
+                      </button>
+                      <button class="btn btn-success" onclick="saveAsExample({{ property.id }})" id="saveExampleBtn">
+                          Save as Example
+                      </button>
+                  </div>
             </div>
         </div>
         
